# ai-assistant-docker-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE.txt  Makefile  README.md  app.py  conversation_history.json  docker-compose.yaml  gui.py  launch_system.bat  pyproject.toml  validate_system.bat
.github/workflows/: ci.yml
reports/docs/: model_card.md
reports/docs/architecture/: system_design.md
reports/docs/decisions/: adr-001-langgraph-vs-langchain.md  api_auth.md  local_llm.md  portfolio_differentation.md
reports/docs/evaluations/: codebase_review.md  portfolio_upgrade_analysis.md
reports/docs/references/: prd.md  project_charter.md  technical_roadmap.md  user_story.md
reports/docs/runbooks/: hardware_resource_limitation.md  memory_storage.md  test_suite.md  verify_app.md
reports/docs/workflows/: phase_1_foundation_hardening.md  phase_2_agentic_upgrade.md  phase_3_production_engineering.md
scripts/: test_calculator_safety.py
src/: constants.py
src/agents/: graph.py  memory.py  prompts.py
src/api/: app.py
src/config/: configuration.py
src/entity/: agent_tools.py  schema.py
src/tools/: __init__.py  tools.py
src/ui/: __init__.py  app.py  client.py  components.py  styles.py
src/utils/: exceptions.py  logger.py  sanitization.py  telemetry.py
tests/: conftest.py  test_api.py  test_configuration.py  test_exceptions.py  test_llm.py  test_memory.py  test_schema.py  test_security.py  test_tools.py  test_ui.py
