[project]
name = "ai-chat-app"
version = "0.1.0"
dependencies = [
    "langchain-openai>=0.1.4",
    "streamlit==1.31.0",
    "langchain>=0.2.0",
    "ipykernel>=6.30.1",
    "fastapi>=0.136.0",
    "uvicorn>=0.44.0",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "langgraph>=1.1.8",
    "langgraph-checkpoint>=4.0.2",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "rich>=13.9.4",
]
requires-python = ">=3.12, <3.13"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "N", "W", "B", "SIM", "C4", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
